[package]
name = "reat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
watch = "0.2.3"
zmq = "0.9"
serde = { version = "1.0", features = ["derive", "rc", "alloc", "std"] }
serde_json = "1.0"
gymnasium = { git = "https://github.com/AndrejOrsula/gymnasium_rs.git" }
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
dot-writer = "0.1.3"
chess = "3.2.0"
approx = "0.5"
rayon = "1.5"
bincode = "2.0.0-rc.3"
