[package]
name = "reat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
watch = "0.2.3"
zmq = "0.9"
gymnasium = { git = "https://github.com/AndrejOrsula/gymnasium_rs.git" }
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
dot-writer = "0.1.3"
chess = "3.2.0"
approx = "0.5"
rayon = "1.5"
bincode = {version = "2.0.0-rc.3", features = ["serde"]}
indexmap = "2.1.0"
uuid = { version = "1.6.1", features = ["v4"] }
